--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
+    "eslint": "^6.1.0",
     "mocha": "^6.1.4",
     "supertest": "^4.0.2"
   }
