--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "tests"
   },
   "scripts": {
-    "lint": "eslint index.js src/**",
-    "test": "mocha tests",
+    "coverage": "nyc mocha tests",
+    "lint": "eslint index.js src/** tests/**",
+    "test": "npm run coverage",
     "start": "npm run lint & npm run test & node index.js"
   },
   "keywords": [
@@ -19,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "nyc": "^14.1.1",
     "sqlite3": "^4.0.6",
     "swagger-ui-express": "^4.0.7"
   },
