--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "test": "tests"
   },
   "scripts": {
-    "coverage": "nyc mocha tests",
+    "coverage": "nyc --check-coverage --lines 80 --statements 80 --branches 80 --per-file --reporter text mocha tests",
     "lint": "eslint index.js src/** tests/**",
     "test": "npm run coverage",
     "start": "npm run lint & npm run test & node index.js"
   },
+  "pre-push": "test",
   "keywords": [
     "Xendit"
   ],
@@ -27,6 +28,7 @@
   "devDependencies": {
     "eslint": "^6.1.0",
     "mocha": "^6.1.4",
+    "pre-push": "^0.1.1",
     "supertest": "^4.0.2"
   }
 }
