--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.16.4",
     "nyc": "^14.1.1",
     "sqlite3": "^4.0.6",
-    "swagger-ui-express": "^4.0.7"
+    "swagger-ui-express": "^4.0.7",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
