--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "coverage": "nyc --check-coverage --lines 80 --statements 80 --branches 80 --per-file --reporter text mocha tests",
     "lint": "eslint index.js src/** tests/**",
     "test": "npm run coverage",
+    "test:load": "forever start index.js && artillery run load-test.yml",
     "start": "npm run lint & npm run test & node index.js"
   },
   "pre-push": "test",
@@ -19,8 +20,10 @@
   "author": "Bo",
   "license": "ISC",
   "dependencies": {
+    "artillery": "^1.6.0-28",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "forever": "^1.0.0",
     "nyc": "^14.1.1",
     "sqlite3": "^4.0.6",
     "swagger-ui-express": "^4.0.7",
